--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "5.3.2",
+    "resolution":{
+     "autoprefixer":"10.4.5"
+    },
     "bootstrap": "5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
