--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -11,9 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "5.3.2",
-    "resolution":{
-     "autoprefixer":"10.4.5"
-    },
+    "autoprefixer":"10.4.5",
     "bootstrap": "5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
