--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "5.3.2",
-    "autoprefixer":"10.4.5",
-     "axios": "0.24.0",
+    "autoprefixer": "10.4.5",
+    "axios": "0.24.0",
     "bootstrap": "5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +45,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "resolutions": {
+      "@types/react": "17.0.2",
+      "@types/react-dom": "17.0.2"
+    }
   }
 }
