--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -45,10 +45,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
+    ]},
+
     "resolutions": {
       "@types/react": "17.0.2",
       "@types/react-dom": "17.0.2"
     }
-  }
+  
 }
